# drf-eager-fields

./: CHANGELOG.md  LICENSE  README.md  dynamic_api_view.py  dynamic_serializer.py  pyproject.toml  setup.py  utils.py
drf_eager_fields/: eager_fields_api_view.py  serializers.py  views.py
drf_extra_fields/: extra_fields_api_view.py  extra_fields_serializer.py
example/app/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
example/app/fixtures/: 0010_countries.yaml  0020_customers_articles.yaml  0030_orders.yaml  test.yaml
example/app/management/commands/: clean_models.py
example/app/migrations/: 0001_initial.py
example/app/serializers/: article_serializer.py  country_serializer.py  customer_serializer.py  data_serializers.py  order_serializer.py  region_serializer.py
example/app/tests/: __init__.py  test_customer.py  test_description.py  test_fields_body.py  test_mix.py  test_mixed.py  test_speed.py  test_tnt.py
example/app/tests/schemas/: mixed.py  tnt.py
example/config/: settings.py  urls.py  wsgi.py
tests/app/: models.py  views.py
tests/app/fixtures/: test.yaml
tests/app/serializers/: article_serializer.py  country_serializer.py  customer_serializer.py  order_serializer.py
tests/app/tests/: test_mix.py
tests/config/: settings.py
