[tool.poetry]
name = "drf-eager-fields"
version = "0.1.0"
description = ""
authors = ["Andrea Del Corto <andrea.delcorto@vedrai.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^4.0"
django-rest-framework = "^0.1.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
